fix: add submit button and use overflow in sidebar

--- a/css/queries.css
+++ b/css/queries.css
@@ -86,25 +86,27 @@
     position: relative;
     padding: 0;
     overflow-x: hidden;
+    overflow: hidden;
   }
 
   .sidebar {
     position: absolute;
     left: 0;
-    top: 0;
+    bottom: 0;
     width: 100vw;
-    height: 100vh;
+    height: 38rem;
     z-index: 2000;
+    overflow-y: scroll;
 
     max-width: 100%;
-    transform: translate(0, 75%);
     border-radius: 30px 30px 0 0;
-    transition: all 0.4s;
     box-shadow: inset 0 2px 0 0 rgb(0, 196, 106, 0.8);
+    transition: all 0.4s;
   }
 
   .sidebar.active {
-    transform: translate(0, 40%);
+    height: 72rem;
+    transform: translate(0, 0);
     box-shadow: none;
   }
 
