--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
   --color-light--1: #aaa;
   --color-light--2: #ececec;
   --color-light--3: rgb(214, 222, 224);
+  --color-text: #102b1e;
 }
 
 * {
@@ -125,7 +126,9 @@ a:visited {
 
   /* Match height and activity boxes */
   height: 9.25rem;
-  transition: all 0.5s, transform 1ms;
+  transition:
+    all 0.5s,
+    transform 1ms;
 }
 
 .form.hidden {
@@ -157,7 +160,6 @@ a:visited {
   font-family: inherit;
   font-size: 1.4rem;
   border: none;
-  border-radius: 3px;
   background-color: var(--color-light--3);
   transition: all 0.2s;
 }
@@ -167,8 +169,22 @@ a:visited {
   background-color: #fff;
 }
 
+.form__btn,
+.form__input {
+  border-radius: 3px;
+}
+
 .form__btn {
-  display: none;
+  background: none;
+  border: none;
+
+  color: var(--color-text);
+  padding: 0.8rem 1.6rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 0.8px;
+
+  background-color: var(--color-brand--2);
 }
 
 .copyright {
